--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,7 +50,9 @@
 
     <main id="main">
         <section>
-            <h1>Conteúdo da Página Inicial</h1>
+            <h1>Projeto de um sistema para um Laboratório de analise de alimentos</h1>
+            <h2>Para iniciar o spring-boot: ./mvnw spring-boot:run </h2>
+            <h2>Banco de dados usado MySQL</h2>
         </section>
 
     </main>
